--- a/index.html
+++ b/index.html
@@ -144,6 +144,17 @@
                 <a href="web_d.html">Get Notes</a>
             </div>
         </div>
+        <div class="card" style="--clr:#009688;">
+            <div class="imgBox">
+                 <img src="mca.jpg" alt="">
+            </div>
+        <div class="contant">
+            <h3>MCA</h3>
+            <p>MCA (Master of Computer Applications)
+                in this provide all semester notes in digital form.
+            </p>
+            <a href="mca.html">Get Notes</a>
+        </div>
     </div>
 </main>
 <div class="heading">
