--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <li><a href="#" class="home">HOME</a></li>
             <li><a href="bca.html" class="course">BCA</a></li>
             <li><a href="#" class="programs">PROGRAM</a></li>
-            <li><a href="https://www.ccsustudy.com/ccsu-bca-papers.html" class="pyq">PYQ PAPER</a></li>
+            <li><a href="https://drive.google.com/drive/folders/1vUq7jbZgNyB-YwH1Yypn0sLj_1gkgbDT" class="pyq">PYQ PAPER</a></li>
             <li><a href="" class="about1">ABOUT</a></li>
             <li><a href="" class="contact">CONTACT</a></li>
         </ul>
