--- a/dsa.html
+++ b/dsa.html
@@ -39,10 +39,10 @@
     <div class="year1">
         <h1><center>Data Structure</center></h1>
         <div class="sem1">
-            <center><a href="#" ><button>Notes 1</button></a></center>
+            <center><a href="https://drive.google.com/file/d/1CfXJ9KP9f38HXXdQaRhexuOW3b2uWJcR/view?usp=drivesdk" ><button>Notes 1</button></a></center>
         </div>
         <div class="sem2">
-            <center><a href="#" ><button>Notes 2</button></a></center>
+            <center><a href="https://drive.google.com/file/d/1CfZnkuikDRCeh96pqyabM85-MzQdsUv9/view?usp=drivesdk" ><button>Notes 2</button></a></center>
         </div>
     </div>
    
