--- a/mca.html
+++ b/mca.html
@@ -9,8 +9,7 @@
         {
             margin: 0;
             padding: 0;
-            background-image: url('static\wallpaperflare.com_wallpaper (9).jpg');
-            background: linear-gradient(135deg,rgb(146, 67, 6),rgb(227, 225, 119));
+            background-image: url('mca_bg1.jpg');
             background-repeat: no-repeat;
             background-position: center;
             background-size: cover;
