--- a/mca.html
+++ b/mca.html
@@ -9,7 +9,7 @@
         {
             margin: 0;
             padding: 0;
-            background-image: url('mca_bg1.jpg');
+            background-image: url("mca_bg1.jpg");
             background-repeat: no-repeat;
             background-position: center;
             background-size: cover;
