--- a/mca.html
+++ b/mca.html
@@ -18,7 +18,7 @@
         h1
         {
             margin-top: 50px;
-            color: black;
+            color: aqua;
             font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
             text-decoration:underline;
         }
