--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </center>
         <div class="container-btn">
             <div class="center">
-                <button>Explore</button>
+                <button href="https://princetyagi2022.github.io/portfolio/">Explore</button>
             </div>
         </div>
     </div>
