--- a/mca.html
+++ b/mca.html
@@ -41,9 +41,10 @@
             <center><a href="https://drive.google.com/drive/folders/1t-I26jTc6XGecEUwsnanBWNFTjXJESs2" ><button>Sem 1</button></a></center>
         </div>
         <div class="sem2">
-            <center><a href="#" ><button>Sem 2</button></a></center>
+            <center><a href="https://drive.google.com/drive/folders/1_9Ki_rOYG83aAfmOS1YvOCbDbXz7rI59?usp=drive_link" ><button>Sem 2</button></a></center>
         </div>
     </div>
    
 </body>
 </html>
+
