--- a/mca.html
+++ b/mca.html
@@ -43,9 +43,16 @@
         <div class="sem2">
             <center><a href="https://drive.google.com/drive/folders/1_9Ki_rOYG83aAfmOS1YvOCbDbXz7rI59?usp=sharing" ><button>Sem 2</button></a></center>
         </div>
+        <div class="sem3">
+            <center><a href="#" ><button>Sem 3</button></a></center>
+        </div>
+        <div class="sem3">
+            <center><a href="#" ><button>Sem 4</button></a></center>
+        </div>
     </div>
    
 </body>
 </html>
+
 
 
